--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>Noxu</title>
+    <meta description="The word &#34;noxu&#34; will be in no English dictionary that you can find, and that is exactly why we chose it.  We want to define Noxu by setting an example on how a design and development group can be run." />
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -20,13 +21,13 @@
           </a>
           <h5 id="h5contact"><a href="">CONTACT</a></h5>
         </div>
-        <div class="small-6 columns">
+        <div class="small-7 columns">
           <br><br><br><br><br><br><br><br>
           <h1 class="white">DEFINITION</h1>
           <hr/>
           <p class="white" id="definition-text">
-            The word "noxu" will be in no English dictionary that you can find, and that is exactly why we chose it.  We want to define Noxu by setting an example on how a design and development group can be run.<br><br>
-            Doing whatever it takes for our clients to bring about the best solution for any project big or small.
+            The word "noxu" is in no dictionary, and that is exactly why we chose it.  We want to define Noxu by setting an example on how a design and development group can be run.<br><br>
+            Doing whatever it takes to bring the best solutions to any project big or small.
           </p>
         </div>
 		 </div>
@@ -35,5 +36,9 @@
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
+    <script type="text/javascript" src="js/skrollr.min.js"></script>
+    <script type="text/javascript">
+      var s = skrollr.init();
+    </script>
   </body>
 </html>
