Recent animatition css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Noxu</title>
     <meta description="The word &#34;noxu&#34; will be in no English dictionary that you can find, and that is exactly why we chose it.  We want to define Noxu by setting an example on how a design and development group can be run." />
     <link rel="stylesheet" href="stylesheets/app.css" />
+    <link rel="stylesheet" href="stylesheets/animate.min.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
@@ -23,7 +24,7 @@
         </div>
         <div class="small-7 columns">
           <br><br><br><br><br><br><br><br>
-          <h1 class="white">DEFINITION</h1>
+          <h1 class="white" id="home-definition-title">DEFINITION</h1>
           <hr/>
           <p class="white" id="definition-text">
             The word "noxu" is in no dictionary, and that is exactly why we chose it.  We want to define Noxu by setting an example on how a design and development group can be run.<br><br>
